--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.2",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
