--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.22.2",
     "bcrypt": "^5.0.1",
+    "caniuse-lite": "^1.0.30001205",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
