--- a/package.json
+++ b/package.json
@@ -20,19 +20,15 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "apollo-boost": "^0.4.9",
-    "apollo-server-express": "^2.22.2",
-    "bcrypt": "^5.0.1",
-    "caniuse-lite": "^1.0.30001205",
-    "cd": "^0.3.3",
-    "express": "^4.17.1",
-    "fund": "^1.0.0",
+    "apollo-server": "^2.22.2",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "if-env": "^1.0.4",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.2",
-    "nodemon": "^2.0.7"
+    "jwt-decode": "^3.1.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.2.0"
   }
 }
